fix: simplificar la resolución del título en el componente DashboardLink y mejorar la legibilidad del código

--- a/packages/apps/esm-offline-tools-app/src/createDashboardLink.scss
+++ b/packages/apps/esm-offline-tools-app/src/createDashboardLink.scss
@@ -4,9 +4,10 @@
 .menu {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .icon {
-  margin-right: layout.$spacing-03;
+  margin-right: layout.$spacing-06;
   fill: colors.$gray-70;
 }
